FIX : Converastion/Note와 Graph의 연동 삭제 로직 수정
